- ctrl-t: now swap two characters (insert templates is now invoked using meta-k)
- improved selection of a identifier
- improved word selection using the mouse: dragging the mouse without releasing the button
  now extends the selection word by word (as expected on Mac OS X)
- improved decision DFA diagram using more precise B-splines

- fixed a bug where some tokens were not properly colorized (cut and past the same token over itself)
- fixed a bug where the file content was not properly parsed if modified outside ANTLRWorks
- fixed a bug where the analysis indicator was colored improperly
- fixed a bug where Go To Character would be off by one character
- fixed a bug when reading the tokenVocab file (was missing the first character)
- fixed a bug where ANTLR would not be able to read the tokenVocab file (missing path)
- fixed a bug in the code generation (problem with grammar name)

Version 1.0ea7 - 12/15/05

- fixed a bug which prevented ANTLRWorks to launch on Windows

Version 1.0ea6 - 12/14/05

- new: graphical representation of the parse tree (interpreter and debugger) that
       can also be exported to bitmap or eps
- new: show artificial Tokens rule
- new: click on an input token (debugger) selects the corresponding token in the grammar
       and in the parse tree
- new: breakpoints in input text (right-click to toggle the breakpoint on any tokens)
- new: breakpoints in grammar now works (click in the editor gutter to enable/disable them)
- new: convert literal quote refactoring tools (to single, to double or c-style quote)
- new: now available as a bundle for Mac OS X (can now drag a grammar file to its icon in the dock)
- new: handle now the tokenVocab options

- improved debugger: display the event where the debugger stopped at
- improved decision DFA: vectorial representation where states can be moved using the mouse
- improved decision DFA: exportable to EPS and bitmap image