@@ -18,6 +18,7 @@ Version 1.0ea8 - 01/20/06
 - improved word selection using the mouse: dragging the mouse without releasing the button
   now extends the selection word by word (as expected on Mac OS X)
 - improved decision DFA diagram using more precise B-splines
+- added an arrow at the end of each syntax diagram
 
 - fixed a bug where some tokens were not properly colorized (cut and past the same token over itself)
 - fixed a bug where the file content was not properly parsed if modified outside ANTLRWorks
